--- a/index.html
+++ b/index.html
@@ -2,14 +2,35 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>العد التنازلي لمهرجان السويس</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>مهرجان صيد الأسماك بالسويس 2025</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>العد التنازلي لمهرجان السويس 🎉</h1>
-    <div id="countdown"></div>
-    <p class="footer">انتظرونا يوم <strong>1 ديسمبر 2025</strong> بالسويس ❤️</p>
+  <div class="overlay">
+    <div class="container">
+      <h1>مهرجان صيد الأسماك بالسويس 2025 🎣</h1>
+      <h2>13 أكتوبر 2025 – محافظة السويس 🌊</h2>
+      <div class="countdown">
+        <div>
+          <span id="days">0</span>
+          يوم
+        </div>
+        <div>
+          <span id="hours">0</span>
+          ساعة
+        </div>
+        <div>
+          <span id="minutes">0</span>
+          دقيقة
+        </div>
+        <div>
+          <span id="seconds">0</span>
+          ثانية
+        </div>
+      </div>
+      <p class="footer">انضموا إلينا للاحتفال بتراث البحر الأحمر وثقافة السويس 🐟</p>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
