--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>مهرجان صيد الأسماك بالسويس 2025</title>
+  <title>مهرجان السويس لصيد الأسماك 2025</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="overlay">
-    <div class="container">
-      <h1>مهرجان صيد الأسماك بالسويس 2025 🎣</h1>
-      <h2>13 أكتوبر 2025 – محافظة السويس 🌊</h2>
-      <div class="countdown">
-        <div>
-          <span id="days">0</span>
-          يوم
+  <div class="container">
+    <h1>مهرجان السويس لصيد الأسماك 2025</h1>
+    <p class="subtitle">الاحتفال بصيد وفنون البحر - السويس</p>
+    <p class="event-date" id="event-date"></p>
+
+    <div class="countdown-card">
+      <div class="countdown-title">بدأ العد التنازلى</div>
+      <div class="time-boxes">
+        <div class="time-box">
+          <div class="time-value" id="days">0</div>
+          <div class="time-label">أيام</div>
         </div>
-        <div>
-          <span id="hours">0</span>
-          ساعة
+        <div class="time-box">
+          <div class="time-value" id="hours">00</div>
+          <div class="time-label">ساعات</div>
         </div>
-        <div>
-          <span id="minutes">0</span>
-          دقيقة
+        <div class="time-box">
+          <div class="time-value" id="minutes">00</div>
+          <div class="time-label">دقائق</div>
         </div>
-        <div>
-          <span id="seconds">0</span>
-          ثانية
+        <div class="time-box">
+          <div class="time-value" id="seconds">00</div>
+          <div class="time-label">ثواني</div>
         </div>
       </div>
-      <p class="footer">انضموا إلينا للاحتفال بتراث البحر الأحمر وثقافة السويس 🐟</p>
+      <div class="cta">
+        <button class="details">مزيد من التفاصيل</button>
+        <button class="register">اشترك الآن</button>
+      </div>
     </div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
