--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
           <div class="time-label">ثواني</div>
         </div>
       </div>
+
+      <!-- روابط بدل الأزرار -->
       <div class="cta">
-        <button class="details">مزيد من التفاصيل</button>
-        <button class="register">اشترك الآن</button>
+        <a href="https://www.facebook.com/share/1JVR9d3EDG/?mibextid=wwXIfr" target="_blank">
+          <button class="details">للاستفسار</button>
+        </a>
+        <a href="https://wsend.co/201283819919" target="_blank">
+          <button class="register">اشترك الآن</button>
+        </a>
       </div>
     </div>
   </div>
