--- a/index.html
+++ b/index.html
@@ -33,14 +33,12 @@
         </div>
       </div>
 
-      <!-- روابط بدل الأزرار -->
+      <!-- روابط الأزرار -->
       <div class="cta">
-        <a href="https://www.facebook.com/share/1JVR9d3EDG/?mibextid=wwXIfr" target="_blank">
-          <button class="details">للاستفسار</button>
-        </a>
-        <a href="https://wsend.co/201283819919" target="_blank">
-          <button class="register">اشترك الآن</button>
-        </a>
+        <a href="https://www.facebook.com/share/1JVR9d3EDG/?mibextid=wwXIfr" 
+           target="_blank" class="btn details">للاستفسار</a>
+        <a href="https://wsend.co/201283819919" 
+           target="_blank" class="btn register">اشترك الآن</a>
       </div>
     </div>
   </div>
