--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- عنصر الساعة الرملية -->
+  <div class="hourglass"></div>
+
   <div class="container">
     <h1>مهرجان السويس لصيد الأسماك 2025</h1>
     <p class="subtitle">الاحتفال بصيد وفنون البحر - السويس</p>
